# Lab3-Haskell

./: CHANGELOG.md  LICENSE  TextProcessor.hi  book.txt  lab3-haskell.cabal  normalized.txt  textproc
app/: Analysis.hs  Main.hs  Normalization.hs  Tokenization.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
