cabal-version:      3.0
name:               lab3-haskell
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE

author:             Artem Demydenko
maintainer:         artem_demydenko@knu.ua

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable lab3_haskell
  main-is:             Main.hs
  hs-source-dirs:      app
  other-modules:       Normalization
                       Tokenization
                       Analysis
  build-depends:       base >=4.7 && <5,
                       containers,
                       directory
  default-language:    Haskell2010
